--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,58 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  
+
+
+}
+.container1{
+  display: flex;
+  flex-direction: column;
+
+}
+.settings{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+ 
+  
 }
 
+body{
+  background-color: #282c34;
+  color:wheat;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
+  text-shadow: 0px 2px 25px rgba(144, 244, 253, .6);
+  -webkit-animation: rainbow 30s infinite linear;
+  -moz-animation: rainbow 30s infinite linear;
+  animation: rainbow 30s infinite linear;
+  
+  
+  
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+ 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+ 
 }
 
 .App-link {
   color: #61dafb;
+
+ 
 }
+
 
 @keyframes App-logo-spin {
   from {
@@ -30,4 +61,77 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+@-webkit-keyframes rainbow {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+    
+  }
+
+  to {
+    -webkit-filter: hue-rotate(360deg);
+    
+  }
+}
+
+@-moz-keyframes rainbow {
+  from {
+    -moz-filter: hue-rotate(0deg);
+    
+  }
+
+  to {
+    -moz-filter: hue-rotate(360deg);
+    
+  }
+}
+
+@keyframes rainbow {
+  from {
+    filter: hue-rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    filter: hue-rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
+button {
+  
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;  
+  font-size: 40px;
+  color: aqua;
+  border-radius:50%; 
+}
+button:hover {
+  text-shadow: 0px 2px 25px rgba(144, 244, 253, .6);
+  color: rgb(0, 255, 208);
+}
+
+
+.SetTimer-controls{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 50px;
+  padding: 10px;
+  margin: 20px;
+  border: solid rgb(27, 62, 63) 2px;
+  border-radius: 50px;
+}
+.SetTimer-controls:hover{
+  background-color: #4b4b4b;
+  box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
+  border: solid rgba(100, 222, 224, 0.741) 2px;
 }
