--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,29 @@ button:hover {
   box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
   border: solid rgba(100, 222, 224, 0.741) 2px;
 }
+
+
+@media only screen and (max-width: 600px) {
+  .App {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .settings{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .SetTimer-controls{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    padding: 10px;
+    margin: 20px;
+    border: solid rgb(27, 62, 63) 2px;
+    border-radius: 50px;
+  }
+
+}
