--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
+
+
 .App {
   text-align: center;
   background-color: #282c34;
-  
-
-
 }
 .container1{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  -webkit-animation: rainbow2 10s infinite linear;
 
 }
 .settings{
@@ -19,12 +21,17 @@
 }
 
 body{
+ 
+  display: flex;
+  justify-content: center;
   background-color: #282c34;
   color:wheat;
+  
+  
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 15vmin;
+  height: 10vmin;
   pointer-events: none;
   text-shadow: 0px 2px 25px rgba(144, 244, 253, .6);
   -webkit-animation: rainbow 30s infinite linear;
@@ -53,6 +60,121 @@ body{
  
 }
 
+
+
+
+
+
+
+button {
+  
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;  
+  font-size: 40px;
+  color: aqua;
+  border-radius:50%; 
+}
+button:hover {
+  text-shadow: 0px 2px 25px rgba(144, 244, 253, .6);
+  color: rgb(0, 255, 208);
+}
+
+
+.SetTimer-controls{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 30px;
+  padding: 10px;
+  margin: 20px;
+  border: solid rgb(27, 62, 63) 2px;
+  border-radius: 50px;
+}
+.SetTimer-controls:hover{
+  background-color: #4b4b4b;
+  box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
+  border: solid rgba(100, 222, 224, 0.741) 2px;
+}
+
+.Timer{
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 20px;
+  padding: 10px;
+  margin: 20px;
+  border: solid rgb(27, 62, 63) 2px;
+  border-radius: 50px;
+  -webkit-animation: rainbow2 20s infinite linear;
+  box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
+  border: solid rgba(100, 222, 224, 0.741) 2px;
+  
+}
+
+#time-left{
+  margin: 0;
+  padding-bottom: 10px;
+  font-size: 50px;
+  text-shadow: 0px 2px 25px rgba(144, 244, 253, 0.115);  
+  
+
+}
+
+.Controls{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  padding: 10px;
+  margin: 20px;
+  border: solid rgb(27, 62, 63) 2px;
+  border-radius: 50px;
+
+}
+.Controls:hover{
+  background-color: #4b4b4b;
+  box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
+  border: solid rgba(100, 222, 224, 0.741) 2px;
+}
+
+
+
+
+/* Mobile settings*/
+
+@media only screen and (max-width: 700px) {
+  .App {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .settings{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .SetTimer-controls{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+}
+
+
+
+
+
+
+
+/* animation keyframes */
 
 @keyframes App-logo-spin {
   from {
@@ -100,64 +222,14 @@ body{
   }
 }
 
-
-
-
-button {
-  
-  background-color: Transparent;
-  background-repeat:no-repeat;
-  border: none;
-  cursor:pointer;
-  overflow: hidden;  
-  font-size: 40px;
-  color: aqua;
-  border-radius:50%; 
-}
-button:hover {
-  text-shadow: 0px 2px 25px rgba(144, 244, 253, .6);
-  color: rgb(0, 255, 208);
-}
-
-
-.SetTimer-controls{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 50px;
-  padding: 10px;
-  margin: 20px;
-  border: solid rgb(27, 62, 63) 2px;
-  border-radius: 50px;
-}
-.SetTimer-controls:hover{
-  background-color: #4b4b4b;
-  box-shadow: 0px 2px 25px rgba(144, 244, 253, 0.395);
-  border: solid rgba(100, 222, 224, 0.741) 2px;
-}
-
-
-@media only screen and (max-width: 600px) {
-  .App {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-  .settings{
-    display: flex;
-    flex-direction: column;
+@keyframes rainbow2 {
+  from {
+    filter: hue-rotate(0deg);
     
   }
-  .SetTimer-controls{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-    padding: 10px;
-    margin: 20px;
-    border: solid rgb(27, 62, 63) 2px;
-    border-radius: 50px;
-  }
 
+  to {
+    filter: hue-rotate(360deg);
+    
+  }
 }
